--- a/isx-pick-crawler-html.cabal
+++ b/isx-pick-crawler-html.cabal
@@ -9,7 +9,16 @@ maintainer:             en@pavouk.tech
 build-type:             Simple
 extra-source-files:     README.md
 --------------------------------------------------------------------------------
+common shared-properties
+    default-language:   Haskell2010
+    default-extensions:
+        OverloadedStrings
+    ghc-options:
+        -Wall
+        -ddump-minimal-imports
+--------------------------------------------------------------------------------
 library pvk-com
+    import:             shared-properties
     exposed-modules:
         PVK.Com.API.Aeson
         PVK.Com.API.Ext.URI
@@ -34,13 +43,9 @@ library pvk-com
         vector
     hs-source-dirs:
         lib/pvk-com/src
-    default-language:   Haskell2010
-    default-extensions:
-        OverloadedStrings
-    ghc-options:
-        -Wall
 
 library isx-pick-crawler-html-int
+    import:             shared-properties
     exposed-modules:
         ISX.Pick.CrawlerHTML.Parser
         ISX.Pick.CrawlerHTML.Route
@@ -67,13 +72,9 @@ library isx-pick-crawler-html-int
         time
     hs-source-dirs:
         src
-    default-language:   Haskell2010
-    default-extensions:
-        OverloadedStrings
-    ghc-options:
-        -Wall
 --------------------------------------------------------------------------------
 executable isx-pick-crawler-html
+    import:             shared-properties
     main-is:            Main.hs
     other-modules:
         Prelude
@@ -87,14 +88,11 @@ executable isx-pick-crawler-html
         snap-server
     hs-source-dirs:
         src/ISX/Pick/CrawlerHTML/Bin
-    default-language:   Haskell2010
-    default-extensions:
-        OverloadedStrings
     ghc-options:
-        -Wall
         -threaded
 --------------------------------------------------------------------------------
 library pvk-com-test
+    import:             shared-properties
     exposed-modules:
         PVK.Com.API.Test
     other-modules:
@@ -103,26 +101,21 @@ library pvk-com-test
         base-noprelude                  ==  4.12.*,
         relude,
         --
-        hspec                           ==  2.*,
-        --
         pvk-com,
         --
         aeson,
         base64-bytestring,
         bytestring,
         http-link-header,
+        hspec                           ==  2.*,
         lens,
         lens-aeson,
         snap-core
     hs-source-dirs:
         lib/pvk-com/test
-    default-language:   Haskell2010
-    default-extensions:
-        OverloadedStrings
-    ghc-options:
-        -Wall
 
 test-suite isx-pick-crawler-html-test
+    import:             shared-properties
     type:               exitcode-stdio-1.0
     main-is:            Spec.hs
     other-modules:
@@ -136,9 +129,6 @@ test-suite isx-pick-crawler-html-test
         base-noprelude                  ==  4.12.*,
         relude,
         --
-        hlint                           ==  2.1.17,
-        hspec                           ==  2.*,
-        --
         isx-pick-crawler-html-int,
         pvk-com,
         pvk-com-test,
@@ -146,6 +136,7 @@ test-suite isx-pick-crawler-html-test
         aeson,
         bytestring,
         containers,
+        hspec                           ==  2.*,
         network-uri,
         text,
         vector
@@ -153,10 +144,6 @@ test-suite isx-pick-crawler-html-test
         test
     build-tool-depends:
         hspec-discover:hspec-discover   ==  2.*
-    default-language:   Haskell2010
-    default-extensions:
-        OverloadedStrings
     ghc-options:
-        -Wall
         -threaded
 --------------------------------------------------------------------------------
