--- a/isx-pick-crawler-html.cabal
+++ b/isx-pick-crawler-html.cabal
@@ -1,6 +1,6 @@
 cabal-version:          2.4
 name:                   isx-pick-crawler-html
-version:                1.0
+version:                1.1
 synopsis:               Isoxya Pickax Crawler HTML
 license:                BSD-3-Clause
 license-file:           LICENSE
@@ -39,8 +39,7 @@ library pvk-com
         network-uri,
         snap-core,
         snap-extras,
-        unordered-containers,
-        vector
+        unordered-containers
     hs-source-dirs:
         lib/pvk-com/src
 
@@ -61,7 +60,6 @@ library isx-pick-crawler-html-int
         pvk-com,
         --
         aeson,
-        bytestring,
         containers,
         HandsomeSoup,
         hxt,
@@ -106,8 +104,10 @@ library pvk-com-test
         aeson,
         base64-bytestring,
         bytestring,
-        http-link-header,
+        directory,
+        filepath,
         hspec                           ==  2.*,
+        http-link-header,
         lens,
         lens-aeson,
         snap-core
@@ -133,8 +133,6 @@ test-suite isx-pick-crawler-html-test
         pvk-com,
         pvk-com-test,
         --
-        aeson,
-        bytestring,
         containers,
         hspec                           ==  2.*,
         network-uri,
