--- a/isx-pick-crawler-html.cabal
+++ b/isx-pick-crawler-html.cabal
@@ -10,6 +10,11 @@ build-type:             Simple
 extra-source-files:     README.md
 --------------------------------------------------------------------------------
 common shared-properties
+    build-depends:
+        base-noprelude                  ==  4.12.*,
+        relude
+    mixins:
+        relude                          (Relude as Prelude)
     default-language:   Haskell2010
     default-extensions:
         OverloadedStrings
@@ -28,12 +33,7 @@ library pvk-com
         PVK.Com.API.Resource.ISXPick
         PVK.Com.API.Resource.ISXPickSnap
         PVK.Com.API.Zone.Common.Error
-    other-modules:
-        Prelude
     build-depends:
-        base-noprelude                  ==  4.12.*,
-        relude,
-        --
         aeson,
         base64-bytestring,
         network-uri,
@@ -52,11 +52,7 @@ library isx-pick-crawler-html-int
         ISX.Pick.CrawlerHTML.Zone.Common.Data
     other-modules:
         ISX.Pick.CrawlerHTML.Resource.Common
-        Prelude
     build-depends:
-        base-noprelude                  ==  4.12.*,
-        relude,
-        --
         pvk-com,
         --
         aeson,
@@ -74,12 +70,7 @@ library isx-pick-crawler-html-int
 executable isx-pick-crawler-html
     import:             shared-properties
     main-is:            Main.hs
-    other-modules:
-        Prelude
     build-depends:
-        base-noprelude                  ==  4.12.*,
-        relude,
-        --
         pvk-com,
         isx-pick-crawler-html-int,
         --
@@ -93,12 +84,7 @@ library pvk-com-test
     import:             shared-properties
     exposed-modules:
         PVK.Com.API.Test
-    other-modules:
-        Prelude
     build-depends:
-        base-noprelude                  ==  4.12.*,
-        relude,
-        --
         pvk-com,
         --
         aeson,
@@ -111,6 +97,8 @@ library pvk-com-test
         lens,
         lens-aeson,
         snap-core
+    mixins:
+        relude                          (Relude as Prelude, Relude.Unsafe)
     hs-source-dirs:
         lib/pvk-com/test
 
@@ -124,11 +112,7 @@ test-suite isx-pick-crawler-html-test
         ISX.Pick.CrawlerHTML.Zone.Common.ApexSpec
         ISX.Pick.CrawlerHTML.Zone.Common.DataSpec
         ISX.Test
-        Prelude
     build-depends:
-        base-noprelude                  ==  4.12.*,
-        relude,
-        --
         isx-pick-crawler-html-int,
         pvk-com,
         pvk-com-test,
