[#3] Common/Data: add header
Expose all headers data as part of crawl. This can be used, separately
or in conjunction with status code.

--- a/isx-pick-crawler-html.cabal
+++ b/isx-pick-crawler-html.cabal
@@ -121,6 +121,7 @@ test-suite isx-pick-crawler-html-test
         hspec                           ==  2.*,
         network-uri,
         text,
+        unordered-containers,
         vector
     hs-source-dirs:
         test
