[#1368] build: add ADDRESS, PORT

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -20,13 +20,13 @@ USER ${USER}
 
 WORKDIR ${HOME}
 
-ENV \
-    PATH=${HOME}/bin:$PATH
+ENV ADDRESS=localhost \
+    PATH=${HOME}/bin:$PATH \
+    PORT=8000
 
-CMD ["isx-pick-crawler-html", \
-    "-p", "8000"]
+CMD isx-pick-crawler-html -b ${ADDRESS} -p ${PORT}
 
-EXPOSE 8000
+EXPOSE ${PORT}
 
-HEALTHCHECK CMD curl -fs http://localhost:8000 || false
+HEALTHCHECK CMD curl -fs http://${ADDRESS}:${PORT} || false
 #===============================================================================
