--- a/isx-pick-crawler-html.cabal
+++ b/isx-pick-crawler-html.cabal
@@ -22,7 +22,7 @@ common shared-properties
         -Wall
         -ddump-minimal-imports
 --------------------------------------------------------------------------------
-library pvk-com
+library common
     import:             shared-properties
     exposed-modules:
         PVK.Com.API.Aeson
@@ -41,7 +41,7 @@ library pvk-com
         snap-extras,
         unordered-containers
     hs-source-dirs:
-        lib/pvk-com/src
+        lib/common/src
 
 library isx-pick-crawler-html-int
     import:             shared-properties
@@ -53,7 +53,7 @@ library isx-pick-crawler-html-int
     other-modules:
         ISX.Pick.CrawlerHTML.Resource.Common
     build-depends:
-        pvk-com,
+        common,
         --
         aeson,
         containers,
@@ -71,7 +71,7 @@ executable isx-pick-crawler-html
     import:             shared-properties
     main-is:            Main.hs
     build-depends:
-        pvk-com,
+        common,
         isx-pick-crawler-html-int,
         --
         snap-server
@@ -80,12 +80,12 @@ executable isx-pick-crawler-html
     ghc-options:
         -threaded
 --------------------------------------------------------------------------------
-library pvk-com-test
+library common-test
     import:             shared-properties
     exposed-modules:
         PVK.Com.API.Test
     build-depends:
-        pvk-com,
+        common,
         --
         aeson,
         base64-bytestring,
@@ -100,7 +100,7 @@ library pvk-com-test
     mixins:
         relude                          (Relude.Unsafe)
     hs-source-dirs:
-        lib/pvk-com/test
+        lib/common/test
 
 test-suite isx-pick-crawler-html-test
     import:             shared-properties
@@ -113,9 +113,9 @@ test-suite isx-pick-crawler-html-test
         ISX.Pick.CrawlerHTML.Zone.Common.DataSpec
         ISX.Test
     build-depends:
+        common,
+        common-test,
         isx-pick-crawler-html-int,
-        pvk-com,
-        pvk-com-test,
         --
         containers,
         hspec                           ==  2.*,
