--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     networks:
       plugin:
         aliases:
-          - crawler-html.plugins.isoxya-stag.pavouk.tech
+          - crawler-html.plugins.dev.isoxya.com
 networks:
   plugin:
     external: true
