--- a/isx-plugin-crawler-html.cabal
+++ b/isx-plugin-crawler-html.cabal
@@ -2,10 +2,10 @@ cabal-version:          3.0
 name:                   isx-plugin-crawler-html
 version:                1.1
 synopsis:               Isoxya plugin: Crawler HTML
-license:                BSD-3-Clause
+license:                NONE
 license-file:           LICENSE
-author:                 Pavouk OÜ
-maintainer:             en@pavouk.tech
+author:                 tiredpixel
+maintainer:             en@isoxya.com
 build-type:             Simple
 extra-source-files:     README.md
 --------------------------------------------------------------------------------
