[#2065] build: tweak email

--- a/isx-plugin-crawler-html.cabal
+++ b/isx-plugin-crawler-html.cabal
@@ -5,7 +5,7 @@ synopsis:               Isoxya plugin: Crawler HTML
 license:                NONE
 license-file:           LICENSE
 author:                 tiredpixel
-maintainer:             tp@tiredpixel.com
+maintainer:             tiredpixel
 build-type:             Simple
 extra-source-files:     README.md
 --------------------------------------------------------------------------------
