--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,7 @@
 version: "2.4"
 services:
   plugin_crawler_html:
-    env_file: .env
-    build: .
-    volumes:
-      - ./dist:/home/x/src/dist
-      - ./isx-plugin-crawler-html.cabal:/home/x/src/isx-plugin-crawler-html.cabal
-      - ./lib:/home/x/src/lib
-      - ./src:/home/x/src/src
-      - ./test:/home/x/src/test
+    image: registry.packages.tiredpixel.com/base/isoxya-plugin-crawler-html-build:head
     networks:
       plugin:
         aliases:
