--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2.4"
 services:
   plugin:
-    image: registry.packages.tiredpixel.com/base/isoxya-plugin-crawler-html-build:head
+    image: docker.package.tiredpixel.com/tiredpixel/isoxya-plugin-crawler-html-build:head
     volumes:
       - ./isx-plugin-crawler-html.cabal:/home/x/repo/isx-plugin-crawler-html.cabal
       - ./lib:/home/x/repo/lib
