--- a/isx-plug-crawler-html.cabal
+++ b/isx-plug-crawler-html.cabal
@@ -27,17 +27,17 @@ library lib-isx-plug-crawler-html
         ISX.Plug.CrawlerHTML.Parser
         ISX.Plug.CrawlerHTML.Route
         TPX.Com.API.Aeson
-        TPX.Com.API.Ext.URI
         TPX.Com.API.Res
-        TPX.Com.API.Resource.ISX.Proc
+        TPX.Com.ISX.PlugProc
+        TPX.Com.URI
     other-modules:
         ISX.Plug.CrawlerHTML.Resource.Common
         ISX.Plug.CrawlerHTML.Zone.Common.Apex
         ISX.Plug.CrawlerHTML.Zone.Common.Data
         Paths_isx_plug_crawler_html
         TPX.Com.API.Req
-        TPX.Com.API.Resource.CommonError
-        TPX.Com.API.Resource.ISX.ProcSnap
+        TPX.Com.API.Resource
+        TPX.Com.ISX.PlugProcSnap
     build-depends:
         aeson,
         base64-bytestring,
