--- a/isx-plug-crawler-html.cabal
+++ b/isx-plug-crawler-html.cabal
@@ -100,6 +100,7 @@ library common-ce-test
         snap-core,
         text,
         unordered-containers,
+        vector,
     hs-source-dirs:
         lib/common-ce/test
 --------------------------------------------------------------------------------
