--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   plug_crawler_html:
     image: docker.package.tiredpixel.com/isoxya/isoxya-plugin-crawler-html-build:head
     volumes:
+      - ./dist:/home/x/repo/dist
       - ./lib:/home/x/repo/lib
       - ./src:/home/x/repo/src
       - ./test:/home/x/repo/test
@@ -12,6 +13,7 @@ services:
       plug:
         aliases:
           - crawler-html.plugin.dev.isoxya.com
+    restart: on-failure
 networks:
   plug:
     external: true
