[#2320] build: fix missing deps

--- a/isx-plug-crawler-html.cabal
+++ b/isx-plug-crawler-html.cabal
@@ -34,7 +34,9 @@ library lib-common-ce
         aeson,
         base64-bytestring,
         bytestring,
+        http-conduit,
         network-uri,
+        regex-compat,
         safe,
         snap-core,
         snap-extras,
