build: set LANG

--- a/pkg/Dockerfile
+++ b/pkg/Dockerfile
@@ -20,7 +20,8 @@ USER ${USER}
 
 WORKDIR ${HOME}
 
-ENV PATH=${HOME}/bin:$PATH
+ENV PATH=${HOME}/bin:$PATH \
+    LANG=C.UTF-8
 
 CMD ["isx-plug-crawler-html", "-b", "localhost", "-p", "8000"]
 
