--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2.4"
 services:
   #-----------------------------------------------------------------------------
-  plug_crawler_html:
+  plug:
     image: docker.package.tiredpixel.com/isoxya/isoxya-plugin-crawler-html-build:head
     init: true
     volumes:
