--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -2,7 +2,7 @@ version: "2.4"
 services:
   #-----------------------------------------------------------------------------
   plug:
-    image: docker.repo.ci.tp-prd.tiredpixel.com/isoxya/isoxya-plugin-crawler-html-build:head
+    image: docker.repo.ci.tp-prd.tiredpixel.com/isoxya.build/isoxya-plugin-crawler-html:unstable
     init: true
     volumes:
       - ./lib:/home/x/repo/lib
