--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -1,22 +1,19 @@
 version: "2.4"
 services:
-  #-----------------------------------------------------------------------------
-  plug:
+  plugin:
     image: docker.io/tiredpixel/isoxya-plugin-crawler-html.build:unstable
     init: true
     volumes:
+      - ./isoxya-plugin-crawler-html.cabal:/home/x/repo/isoxya-plugin-crawler-html.cabal
       - ./lib:/home/x/repo/lib
       - ./src:/home/x/repo/src
       - ./test:/home/x/repo/test
-      #
-      - ./isx-plug-crawler-html.cabal:/home/x/repo/isx-plug-crawler-html.cabal
     networks:
-      plug:
+      plugin:
         aliases:
-          - crawler-html.plugin.dev.isoxya.com
+          - isoxya-plugin-crawler-html.localhost
     restart: on-failure
-  #-----------------------------------------------------------------------------
 networks:
-  plug:
+  plugin:
     external: true
-    name: isoxya_plug
+    name: isoxya_plugin
