--- a/pkg/Dockerfile
+++ b/pkg/Dockerfile
@@ -1,4 +1,3 @@
-#===============================================================================
 # FROMFREEZE docker.io/library/debian:10
 FROM docker.io/library/debian@sha256:e5333f8697a86fa1be53b2a7e994247083f61885166df0cdda9f812acb514d7c
 
@@ -23,9 +22,8 @@ WORKDIR ${HOME}
 ENV PATH=${HOME}/bin:$PATH \
     LANG=C.UTF-8
 
-CMD ["isx-plug-crawler-html", "-b", "localhost", "-p", "8000"]
+CMD ["isoxya-plugin-crawler-html", "-b", "localhost", "-p", "8000"]
 
 EXPOSE 8000
 
 HEALTHCHECK CMD curl -fs http://localhost:8000 || false
-#===============================================================================
