[2473] build: upgrade to Haskell 8.10
- Haskell 9.2 has snap incompatibility

- Haskell 9.0 has snap incompatibility

- Haskell 8.10 has hspec-snap incompatibility; temporarily disable

- remove Cabal v1- prefixes

- make GHC flags stricter

--- a/isoxya-plugin-crawler-html.cabal
+++ b/isoxya-plugin-crawler-html.cabal
@@ -5,11 +5,10 @@ synopsis:               Isoxya Crawler HTML plugin
 license:                BSD-3-Clause
 author:                 Nic Williams <tp@tiredpixel.com>
 maintainer:             Nic Williams <tp@tiredpixel.com>
-build-type:             Simple
 --------------------------------------------------------------------------------
 common common-properties
     build-depends:
-        base                            ==  4.13.*,
+        base                            ^>= 4.14.3.0,
         relude
     mixins:
         base                            hiding (Prelude),
@@ -18,8 +17,8 @@ common common-properties
     default-extensions:
         OverloadedStrings
     ghc-options:
-        -Wall
-        -ddump-minimal-imports
+        -Weverything
+        -Werror
 --------------------------------------------------------------------------------
 library lib-common
     import:             common-properties
@@ -110,7 +109,7 @@ library lib-common-test
         filepath,
         hspec                           ==  2.*,
         hspec-core,
-        hspec-snap,
+        --hspec-snap,
         http-link-header,
         lens,
         lens-aeson,
