[2473] build: fix could not find TiredPixel.Common.Snap.Test
Also revert GHC -Weverything => -Wall , since compilation fails
otherwise. Keep -Werror for now.

--- a/isoxya-plugin-crawler-html.cabal
+++ b/isoxya-plugin-crawler-html.cabal
@@ -17,7 +17,7 @@ common common-properties
     default-extensions:
         OverloadedStrings
     ghc-options:
-        -Weverything
+        -Wall
         -Werror
 --------------------------------------------------------------------------------
 library lib-common
