[2491] lib/common: update duration interface

--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -13,5 +13,6 @@ services:
         aliases:
           - isoxya-plugin-crawler-html.localhost
     restart: on-failure
+    env_file: .env
 networks:
   plugin: {}
