--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -9,10 +9,10 @@ services:
       - ./src:/home/x/repo/src
       - ./test:/home/x/repo/test
     networks:
-      plugin:
+      processor:
         aliases:
           - isoxya-plugin-crawler-html.localhost
     restart: on-failure
     env_file: .env
 networks:
-  plugin: {}
+  processor: {}
